--- a/src/components/Restaurant-card/restaurant-card.module.scss
+++ b/src/components/Restaurant-card/restaurant-card.module.scss
@@ -14,14 +14,20 @@
 
     &__container {
         display: flex;
-
-        &.withForm {
-            margin-bottom: 24px;
-        }
     }
 
     &__block {
         flex: 1;
         padding-left: 24px;
+    }
+
+    &__wrap {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        gap: 24px;
+
+        &.withForm {
+            margin-bottom: 24px;
+        }
     }
 }
