--- a/src/components/App/app.module.scss
+++ b/src/components/App/app.module.scss
@@ -1,3 +1,9 @@
+*,
+::before,
+::after {
+    box-sizing: border-box;
+}
+
 body {
     margin: 0;
     font-family: 'Roboto', sans-serif;
@@ -13,4 +19,13 @@ h2,
 h3,
 h4 {
     margin: 0;
+}
+
+a {
+    text-decoration: none;
+    color: #000;
+
+    &:visited {
+        color: #000;
+    }
 }
