--- a/src/components/Basket/basket.module.scss
+++ b/src/components/Basket/basket.module.scss
@@ -2,6 +2,7 @@
     width: 80%;
     max-width: 80%;
     margin: 0 auto;
+    margin-top: auto;
     padding: 24px;
     background-color: #fff0db;
 
