--- a/src/components/Restaurant-card/restaurant-card.module.scss
+++ b/src/components/Restaurant-card/restaurant-card.module.scss
@@ -1,5 +1,10 @@
 .restaurantCard {
-    width: 100%;
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+    width: 80%;
+    margin: 0 auto;
+    padding: 48px 0;
 
     &__title {
         margin-bottom: 16px;
