--- a/src/components/Restaurants-tabs/restaurants-tabs.module.scss
+++ b/src/components/Restaurants-tabs/restaurants-tabs.module.scss
@@ -1,6 +1,4 @@
-.restaurantsList {
-    flex: 1;
-
+.restaurantsTabs {
     &__tabs {
         display: flex;
         justify-content: center;
@@ -8,15 +6,6 @@
         min-height: 48px;
         padding: 0 24px;
         background-color: #E5E5E5;
-    }
-
-    &__content {
-        display: flex;
-        flex-direction: column;
-        gap: 12px;
-        max-width: 80%;
-        margin: 0 auto;
-        padding: 48px 0;
     }
 
     &.isDark {
